# data-pipelines-with-airflow-2nd-ed

./: .gitignore  README.md  changes_airflow3.md  official-airflow-docker-compose.yml  pyproject.toml  validate-dag-runs.sh
.github/workflows/: ci.yaml  dag_integrity.yaml
chapter01/: .env  compose.override.yaml
chapter01/dags/: 01_umbrella.py
chapter02/: .env  README.md  compose.override.yaml
chapter02/dags/: 01_download_rocket_launches.py  02_download_rocket_launches.py  03_BashOperator.py  04_PythonOperator_get_pictures.py  05_download_rocket_launches.py
chapter02/scripts/: listing_2_10.sh
chapter03/: .env  README.md  compose.override.yaml
chapter03/_legacy_dags/: 07_no_catchup.py  09b_data_aware_producer.py  09c_data_aware_producer.py
chapter03/dags/: 01_unscheduled.py  02_daily_schedule.py  02_trigger_cron.py  03_daily_incremental.py  03_time_delta.py  03_timedelta.py  03_trigger_preset.py  04_daily_interval.py  04_timetable.py  04_trigger_frequency.py  05_daily_templated.py  05_interval_cron.py  06_daily_incremental.py  06_interval_delta.py  07_events_timetable.py  07_no_catchup.py  08_non_atomic_send.py  08_timetable.py  08a_timetable.py  08b_timetable.py  09_atomic_send.py  09a_data_aware_consumer.py  09b_data_aware_producer.py  09c_data_aware_producer.py  09d_data_aware_producer.py  10_non_atomic_send.py  11_atomic_send.py  xx_data_aware_consumer.py  xx_data_aware_producer.py
chapter03b/: .env  compose.override.yaml  compose.yaml
chapter03b/_old/: 09d_data_aware_producer.py
chapter03b/config/: airflow.cfg
chapter03b/dags/: 01_producer.py  02_consumer.py
chapter04/: .env  README.md  compose.override.yaml
chapter04/_old/: 09a_data_aware_consumer.py  09e_data_aware_consumer.py
chapter05/: .env  README.md  compose.override.yaml  docker-compose.yml
chapter06/: .env  README.md  compose.override.yaml  docker-compose.yml
chapter07/: .env  README.md  compose.override.yaml  requirements.txt
chapter08/: .env  README.md  compose.override.yaml
chapter09/: .env  README.md  compose.override.yaml  requirements.txt
chapter10/: .env  README.md  compose.override.yaml  requirements.txt
chapter11/: .env  README.md  compose.override.yaml  requirements.txt
chapter12/: .env  README.md  compose.override.yaml  requirements.txt  setup.py
chapter13/: .env  .env.template  README.md  compose.override.yaml  setup.py
chapter13/recipe_chat/: Dockerfile  README.md  pyproject.toml
chapter13/recipe_chat/src/recipe_chat/: chat.py  utils.py
chapter13/recipe_chat/src/recipe_chat/pages/: 2_🔼_Upload.py
chapter13/vectorvault/: Dockerfile.chat  Dockerfile.cli  pyproject.toml
chapter13/vectorvault/notebooks/: 02_collection_manager.ipynb  03_retrieve_with_openai.ipynb
chapter13/vectorvault/sample_recipes/2024-10-06/: empanadas-argentinas.json  rollitos-de-pollo-con-salsa-de-champinones.json
chapter13/vectorvault/src/vectorvault/: cli.py  logs.py  utils.py
chapter13/vectorvault/src/vectorvault/chat/pages/: 1_💬 _Chat.py  utils.py
chapter13_genai/: .env  .env.template  .pre-commit-config.yaml  README.md  compose.override.yaml
chapter13_genai/recipe_book/: .env  .gitignore  Dockerfile  README.md  pyproject.toml
chapter13_genai/recipe_book/notebooks/: 00_embed_with_azure.ipynb  01_embed_and_save.ipynb  02_Retrieve_locally.ipynb  02_retrieve_with_openai.ipynb  03_embed_and_replace.ipynb  connect.ipynb  connect_azure.ipynb  extract.ipynb  recipe.ipynb  splitted.parquet  splitted_with_vectors.parquet
chapter13_genai/recipe_book/sample_recipes/2024-10-14/: empanadas-argentinas.txt  pavo-a-la-hawaiana.txt
chapter13_genai/recipe_book/sample_recipes/2024-10-15/: costillar-de-cerdo-con-pina.txt  rollitos-de-pollo-con-salsa-de-champinones.txt
chapter13_genai/recipe_book/sample_recipes/2024-10-16/: bowl-de-pollo-con-verduras.txt  pescado-poblano-con-berros-y-ejotes.txt
chapter13_genai/recipe_book/src/recipe_book/: Dockercompose  cli.py  fetch.py  preprocess.py  train.py  utils.py
chapter14/: .env  .env.template  Dockerfile.edge  README.md  compose.override.yaml
chapter15/: .env  Dockerfile.edge  README.md  compose.override.yaml  docker-compose.yml
chapter16/: .env  .gitignore  Dockerfile.dags-in-image  Dockerfile.deps-in-image  Dockerfile.executors_default_image  Dockerfile.executors_extended_image  Dockerfile.executors_tensorflow  Dockerfile.executors_tensorflow_old  README.md  compose.yaml  docker-compose.yml  enable-external-dns.sh  publish-custom-images.sh
chapter17/: .env  Dockerfile.dags-in-image  Dockerfile.deps-in-image  Dockerfile.executors_default_image  Dockerfile.executors_tensorflow  Dockerfile.executors_tensorflow_old  README.md  bash_aliases.sh  compose.yaml  dags-pvc-agent  docker-compose.yml  publish-custom-images.sh
chapterXX/: compose.override.yaml
chapterml/: .env  docker-compose.yml
chapterml/images/fashion-model/: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
chapterml/images/fashion-model/notebooks/: example.ipynb
chapterml/images/fashion-model/src/fashion_model/: cli.py  fetch.py  train.py
(+364 files in other folders)
