[tool.poetry]
name = "recipe-chat"
version = "0.1.0"
description = ""
authors = ["Ismael Cabral <ismaelcv@gmail.com>"]
readme = "README.md"
packages = [
    { include = "recipe_chat", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
streamlit = "^1.40.0"
streamlit-chat = "^0.1.1"
python-dotenv = "^1.0.1"
openai = "^1.54.3"
langchain = "^0.3.7"
weaviate-client = "^4.9.3"
langchain-openai = "^0.2.6"
langchain-weaviate = "^0.0.3"
minio = "^7.2.10"
fsspec = "^2024.10.0"
s3fs = "^2024.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




[tool.ruff]
line-length = 120


[tool.isort]
line_length = 120
profile = "black"
