[tool.poetry]
name = "fashion-model"
version = "0.1.0"
description = ""
authors = ["Julian de Ruiter <julianderuiter@godatadriven.com>"]
readme = "README.md"
packages = [{include = "fashion_model", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = {version = ">=2.15.0", markers = "sys_platform != 'darwin' or platform_machine != 'arm64'"}
tensorflow-macos = {version = ">=2.15.0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"}
fsspec = "^2023.12.2"
s3fs = "^2023.12.2"
python-dotenv = "^1.0.0"
typer = "^0.9.0"
#aiobotocore = {extras = ["boto3"], version = "^2.9.0"}
aiobotocore = {extras = ["boto3"], version = "^2.9.0"}
mlflow-skinny = "^2.9.2"
# Keras dependency for MLflow.
pandas = "^2.1.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
ipykernel = "^6.27.1"
mypy = "^1.8.0"

[tool.poetry.scripts]
fashion-model = 'fashion_model.cli:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
