[tool.poetry]
name = "fashion-model"
version = "0.1.0"
description = ""
authors = ["Julian de Ruiter <julianderuiter@godatadriven.com>"]
readme = "README.md"
packages = [{include = "fashion_model", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fsspec = "^2023.12.2"
s3fs = "^2023.12.2"
python-dotenv = "^1.0.0"
typer = "^0.9.0"
aiobotocore = {extras = ["boto3"], version = "^2.9.0"}
mlflow-skinny = "^2.9.2"
pandas = "^2.1.4"
tensorflow = {version = "~2.13.0" }
tensorflow-macos = { version = "~2.13.0", platform = "darwin", markers = "platform_machine=='arm64'" }
tensorflow-intel = { version = "~2.13.0", platform = "win32" }
tensorflow-cpu = [
    { version = "~2.13.0", platform = "linux", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
    { version = "~2.13.0", platform = "darwin", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
]
tensorflow-cpu-aws = { version = "~2.13.0", platform = "linux", markers = "platform_machine=='arm64' or platform_machine=='aarch64'" }
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" }
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
ipykernel = "^6.27.1"
mypy = "^1.8.0"

[tool.poetry.scripts]
fashion-model = 'fashion_model.cli:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
